This is 10 commit

--- a/file1.html
+++ b/file1.html
@@ -4,7 +4,7 @@
         <link rel="icon" href="karthik color.JPG">
     </head>
     <hr><hr>
-    <body bgcolor="white" style= "color:blue"><br>
+    <body bgcolor="white" style= "color:red"><br>
         <center><h1>WELCOME TO KARTHIK LEARNING ✍️</h1></center>
         <hr><hr>
         <center>
